[gd_scene load_steps=10 format=3 uid="uid://b0sd75bp5hwj4"]

[ext_resource type="Script" path="res://Scenes/screens/change_island_screen/island_icon.gd" id="1_m86nt"]
[ext_resource type="Texture2D" uid="uid://8axsdj03bsno" path="res://Assets/aseprite/islandmap_island.png" id="1_t1x7w"]
[ext_resource type="PackedScene" uid="uid://bvebbtxnfoh73" path="res://Components/interactable_2d.tscn" id="2_x1gom"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8e82g"]
atlas = ExtResource("1_t1x7w")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr7ap"]
atlas = ExtResource("1_t1x7w")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sflcg"]
atlas = ExtResource("1_t1x7w")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_y1evj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e82g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr7ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sflcg")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tkrur"]
radius = 7.0
height = 44.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5gnk3"]
radius = 41.0122

[node name="IslandIcon" type="StaticBody2D"]
script = ExtResource("1_m86nt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_y1evj")
autoplay = "default"
offset = Vector2(0, -17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tkrur")

[node name="Interact" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -75.0
offset_right = 41.5
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
text = "[f] to enter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Interactable2D" parent="." instance=ExtResource("2_x1gom")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable2D"]
shape = SubResource("CircleShape2D_5gnk3")

[connection signal="body_entered" from="Interactable2D" to="." method="_on_interactable_2d_body_entered"]
[connection signal="body_exited" from="Interactable2D" to="." method="_on_interactable_2d_body_exited"]
[connection signal="on_interacting" from="Interactable2D" to="." method="_on_interactable_2d_on_interacting"]
